--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,19 +62,14 @@ ORDER: Base + typography > general layout, grid > page layout > components
 html {
   font-size: 62.5%;
 }
-@media screen and (max-width: 75em) {
+@media (max-width: 75em) {
   html {
     font-size: 56.25%;
   }
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   html {
     font-size: 50%;
-  }
-}
-@media screen and (min-width: 112.5em) {
-  html {
-    font-size: 75%;
   }
 }
 
@@ -82,7 +77,7 @@ body {
   box-sizing: border-box;
   padding: 3rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   body {
     padding: 0;
   }
@@ -116,7 +111,7 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .heading-primary--main {
     letter-spacing: 1rem;
     font-size: 5rem;
@@ -129,7 +124,7 @@ body {
   letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .heading-primary--sub {
     letter-spacing: 0.5rem;
   }
@@ -146,12 +141,12 @@ body {
   letter-spacing: 0.2rem;
   transition: all 0.2s;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .heading-secondary {
     font-size: 3rem;
   }
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .heading-secondary {
     font-size: 2.5rem;
   }
@@ -181,7 +176,7 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 8rem !important;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .u-margin-bottom-big {
     margin-bottom: 5rem !important;
   }
@@ -190,7 +185,7 @@ body {
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .u-margin-bottom-medium {
     margin-bottom: 3rem !important;
   }
@@ -465,7 +460,7 @@ body {
   z-index: 10;
   transition: all 0.2s;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .composition__photo {
     position: relative;
     float: left;
@@ -477,7 +472,7 @@ body {
   left: 0;
   top: -2rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .composition__photo--p1 {
     top: 0;
     transform: scale(1.2);
@@ -487,7 +482,7 @@ body {
   right: 0;
   top: 2rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .composition__photo--p2 {
     top: -1rem;
     transform: scale(1.3);
@@ -498,7 +493,7 @@ body {
   left: 20%;
   top: 10rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .composition__photo--p3 {
     top: 1rem;
     left: 0;
@@ -524,7 +519,7 @@ body {
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform 0.3s;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .feature-box {
     padding: 2rem;
   }
@@ -537,7 +532,7 @@ body {
   background-image: linear-gradient(to right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
   background-clip: text;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .feature-box__icon {
     margin-bottom: 0;
   }
@@ -560,7 +555,7 @@ body {
   border-bottom: 3px solid transparent;
   transition: all 0.3s;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .form__input {
     width: 100%;
   }
@@ -593,7 +588,7 @@ body {
   width: 49%;
   display: inline-block;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .form__radio-group {
     width: 100%;
     margin-bottom: 2rem;
@@ -670,7 +665,7 @@ body {
   transform: translate(-50%, -50%) scale(0.25);
   transition: all 0.5s 0.2s;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .popup__content {
     flex-direction: column-reverse;
   }
@@ -678,14 +673,14 @@ body {
 .popup__left {
   width: 33.3333333%;
 }
-@media screen and (max-width: 75em) {
+@media (max-width: 75em) {
   .popup__left {
     width: 33%;
     display: flex;
     flex-direction: column;
   }
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .popup__left {
     width: 50%;
     display: flex;
@@ -697,7 +692,7 @@ body {
   width: 66.66666667%;
   padding: 3rem 5rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .popup__right {
     display: flex;
     flex-direction: column;
@@ -718,7 +713,7 @@ body {
   column-rule: 1px solid #eee;
   hyphens: auto;
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .popup__text {
     column-count: 1;
     padding: 1rem 2rem;
@@ -759,14 +754,14 @@ body {
   display: flex;
   align-items: center;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .story {
     width: 100%;
     padding: 4rem;
     padding-left: 7rem;
   }
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .story {
     transform: skewX(0);
   }
@@ -783,7 +778,7 @@ body {
   transform: skewX(12deg);
   position: relative;
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .story__shape {
     transform: skewX(0);
   }
@@ -796,7 +791,7 @@ body {
 .story__text {
   transform: skewX(12deg);
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .story__text {
     transform: skewX(0);
   }
@@ -828,7 +823,7 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .footer {
     padding: 8rem 0;
   }
@@ -837,7 +832,7 @@ body {
   text-align: center;
   margin-bottom: 8rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .footer__logo-box {
     margin-bottom: 6rem;
   }
@@ -850,7 +845,7 @@ body {
   padding-top: 2rem;
   border-top: 1px solid #777;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .footer__navigation {
     width: 100%;
     text-align: center;
@@ -879,7 +874,7 @@ body {
   padding-top: 2rem;
   border-top: 1px solid #777;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .footer__copyright {
     width: 100%;
   }
@@ -889,20 +884,18 @@ body {
   max-width: 114rem;
   margin: 0 auto;
   display: grid;
+  grid-template-columns: 1fr;
+  gap: 6rem;
   gap: 6rem;
 }
 .row:not(:last-child) {
   margin-bottom: 8rem;
 }
-@media screen and (max-width: 56.25em) {
-  .row:not(:last-child) {
-    margin-bottom: 6rem;
-  }
-}
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .row {
     max-width: 50rem;
     padding: 0 3rem;
+    gap: 6rem;
   }
 }
 .row.row-1-of-2 {
@@ -917,16 +910,12 @@ body {
 .row.row-2-of-3 {
   grid-template-columns: 2fr 1fr;
 }
-.row.row-2-of-4 {
-  grid-template-columns: repeat(2, 1fr) repeat(2, 1fr);
-}
 .row.row-3-of-4 {
-  grid-template-columns: repeat(3, 1fr) 1fr;
+  grid-template-columns: 3fr 1fr;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .row {
     grid-template-columns: 1fr;
-    gap: 6rem;
   }
 }
 
@@ -943,7 +932,7 @@ body {
     background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   }
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .header {
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
   }
@@ -980,13 +969,13 @@ body {
   text-align: center;
   cursor: pointer;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .navigation__button {
     top: 4rem;
     right: 4rem;
   }
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .navigation__button {
     top: 3rem;
     right: 3rem;
@@ -1004,13 +993,13 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .navigation__background {
     top: 4.5rem;
     right: 4.5rem;
   }
 }
-@media screen and (max-width: 37.5em) {
+@media (max-width: 37.5em) {
   .navigation__background {
     top: 3.5rem;
     right: 3.5rem;
@@ -1111,7 +1100,7 @@ body {
   padding: 25rem 0;
   margin-top: -20vh;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .section-about {
     padding: 20rem 0;
   }
@@ -1127,7 +1116,7 @@ body {
 .section-features > * {
   transform: skewY(7deg);
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .section-features {
     padding: 10rem 0;
   }
@@ -1138,7 +1127,7 @@ body {
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .section-tours {
     padding: 20rem 0 10rem 0;
   }
@@ -1148,7 +1137,7 @@ body {
   position: relative;
   padding: 15rem 0;
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .section-stories {
     padding: 10rem 0;
   }
@@ -1158,7 +1147,7 @@ body {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #7ed56f, #28b485);
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .section-book {
     padding: 10rem 0;
   }
@@ -1170,13 +1159,13 @@ body {
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
 }
-@media screen and (max-width: 75em) {
+@media (max-width: 75em) {
   .book {
     background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 65%, transparent 65%), url(../img/nat-10.jpg);
     background-size: cover;
   }
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .book {
     background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), url(../img/nat-10.jpg);
   }
@@ -1185,12 +1174,12 @@ body {
   width: 50%;
   padding: 6rem;
 }
-@media screen and (max-width: 75em) {
+@media (max-width: 75em) {
   .book__form {
     width: 65%;
   }
 }
-@media screen and (max-width: 56.25em) {
+@media (max-width: 56.25em) {
   .book__form {
     width: 100%;
   }
