--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -25,28 +25,39 @@ ORDER: Base + typography > general layout, grid > page layout > components
 */
 
 @mixin respond($breakpoint) {
-  // 600px / 16 = 37.5
   @if ($breakpoint == phone) {
-    @media screen and (max-width: 37.5em) {
+    @media (max-width: 37.5em) {
       @content;
-    }
+    } // 600px
   }
-  // 900px / 16 = 56.25
   @if ($breakpoint == tab-port) {
-    @media screen and (max-width: 56.25em) {
+    @media (max-width: 56.25em) {
       @content;
-    }
+    } // 900px
   }
-  // 1200px / 16 = 75
   @if ($breakpoint == tab-land) {
-    @media screen and (max-width: 75em) {
+    @media (max-width: 75em) {
       @content;
-    }
+    } // 1200px
   }
-  // 1800px / 16 = 112.5
-  @if ($breakpoint == big-desktop) {
-    @media screen and (min-width: 112.5em) {
+  @if ($breakpoint == desktop) {
+    @media (min-width: 112.5em) {
       @content;
-    }
+    } // 1800px
   }
+}
+
+// New grid system mixins
+@mixin grid($columns: 1fr, $gap: $gutter-horizontal) {
+  display: grid;
+  grid-template-columns: $columns;
+  gap: $gap;
+}
+
+@mixin flex($direction: row, $justify: flex-start, $align: stretch, $gap: 0) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+  gap: $gap;
 }
